# DoD

./: .gitignore  .pre-commit-config.yaml  .sgcrc  LICENSE  README.md  THIRD_PARTY_NOTICES.md  makefile  pyproject.toml
.agents/skills/dod-library-qa/: SKILL.md
.agents/skills/read-long-docs-skill/: SKILL.md
.github/workflows/: pre-commit.yml  tests.yml
conf/: config.yaml
src/DoD/: __init__.py  config.py  page_table.py  pipeline.py
src/DoD/cli/: main.py
src/DoD/io/: artifacts.py
src/DoD/normalize/: __init__.py  normalize.py
src/DoD/ocr/: base.py  dummy.py  glm_ocr.py  glm_ocr_transformers.py  ollama_ocr.py  plain_text.py
src/DoD/pageindex/: __init__.py  config.py  page_index.py  page_index_md.py  utils.py
src/DoD/server/: __init__.py  app.py
src/DoD/text_extractor/: __init__.py  base.py  dummy.py  glm_ocr.py  glm_ocr_transformers.py  ollama_ocr.py  plain_text.py  pymupdf.py  pytesseract.py
src/DoD/toc/: __init__.py  pageindex_adapter.py
src/scripts/: dod_mcp.py  main.py  server.py
tests/: test_artifacts_io.py  test_basic.py  test_dod_mcp.py  test_normalize.py  test_page_table.py  test_page_table_images.py  test_pageindex_config.py  test_pageindex_page_index_helpers.py  test_pageindex_request_config.py  test_pageindex_utils_helpers.py  test_pipeline_extractor_selection.py  test_pipeline_helpers.py  test_pipeline_plain_text.py  test_server_app.py  test_server_concurrency.py  test_text_extractor_pytesseract.py
